# session-bot

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  config_template.json  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
session-bot/: __main__.py  main.py
session-bot/bot/: bot.py  utils.py
session-bot/bot/schedule/: SessionCog.py  cal.py
session-bot/util/: config.py  log.py  timeTools.py
