[tool.poetry]
name = "session-bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
"discord.py" = "^1.4.1"
requests = "^2.24.0"
dateutils = "^0.6.8"
google-api-python-client = "^1.10.0"
google-auth-oauthlib = "^0.4.1"
pytz = "^2020.1"

[tool.poetry.dev-dependencies]
pylint = "^2.5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
